--- a/src/components/todolist/ToDoList.module.css
+++ b/src/components/todolist/ToDoList.module.css
@@ -36,7 +36,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 1.5rem;
-  border-top: 1px solid var(--gray-400);
+  margin: 0;
 }
 
 .noTodos {
@@ -45,6 +45,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 4rem;
+  border-top: 1px solid var(--gray-400);
 }
 
 .noTodos img {
@@ -56,4 +57,67 @@
 .noTodos strong {
   display: block;
   margin-bottom: -1rem;
+}
+
+.todos {
+  list-style: none;
+  width: 100%;
+  padding-inline-start: 0px;
+}
+
+.todos li {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  color: var(--gray-100);
+  background-color: var(--gray-500);
+  border-radius: 8px;
+  padding: 1rem;
+  font-size: 0.875rem;
+  line-height: 1.4;
+  border: 1px solid var(--gray-400);
+  max-width: 736px;
+  box-sizing: border-box;
+}
+
+.todos li + li {
+  margin-top: 0.875rem;
+}
+
+.todos svg {
+  margin-left: auto;
+  cursor: pointer;
+  color: var(--gray-300);
+}
+
+.todoRadio {
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  border: 2px solid var(--blue);
+  cursor: pointer;
+}
+
+.todoRadio.done {
+  border: 2px solid var(--purple-dark);
+
+  background-color: var(--purple-dark);
+  display: flex;
+  align-items: center;
+  justify-content: center ;
+}
+
+.todoRadio.done svg {
+  color: var(--gray-100);
+}
+
+.todos li p {
+  flex: 1;
+  padding-right: 2rem;
+}
+
+.isDone {
+  color: var(--gray-300);
+  text-decoration: line-through;
 }
