--- a/src/components/todolist/ToDoList.module.css
+++ b/src/components/todolist/ToDoList.module.css
@@ -117,6 +117,10 @@
   padding-right: 2rem;
 }
 
+.todos li svg:hover {
+  color: var(--danger );
+}
+
 .isDone {
   color: var(--gray-300);
   text-decoration: line-through;
