useFirestore dispatch bug fixed

--- a/src/components/createToDo/CreateToDo.module.css
+++ b/src/components/createToDo/CreateToDo.module.css
@@ -31,3 +31,13 @@
   font-weight: bold;
   cursor: pointer;
 }
+
+.loading svg {
+  animation: spin 0.5s infinite;
+}
+
+@keyframes spin {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+
+}
