--- a/src/components/todolist/ToDoList.module.css
+++ b/src/components/todolist/ToDoList.module.css
@@ -44,14 +44,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 4rem;
+  margin-top: 1rem;
   border-top: 1px solid var(--gray-400);
+  width: 100%;
 }
 
 .noTodos img {
   height: 56px;
   width: 56px;
-  margin-bottom: 1rem;
+  margin: 1rem 0 1rem 0;
 }
 
 .noTodos strong {
