--- a/src/global.css
+++ b/src/global.css
@@ -25,7 +25,13 @@ html {
 
   @media (max-width: 400px) {
     html {
-      font-size: 87.25%;
+      font-size: 87.50%;
+    }
+  }
+
+  @media (max-width: 360px) {
+    html {
+      font-size: 81.25%;
     }
   }
 }
