--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -8,6 +8,13 @@
   color: var(--blue);
 }
 
+@media (max-width: 400px) {
+  .login-form {
+    max-width: 310px;
+    box-sizing: border-box;
+  }
+}
+
 .login-form label {
   display: block;
   margin: 1.5rem 0;
