--- a/src/pages/signup/Signup.module.css
+++ b/src/pages/signup/Signup.module.css
@@ -9,6 +9,13 @@
   z-index: 100;
 }
 
+@media (max-width: 400px) {
+  .signup-form {
+    max-width: 310px;
+    box-sizing: border-box;
+  }
+}
+
 .signup-form label {
   display: block;
   margin: 1.5rem 0;
