--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -18,6 +18,12 @@
   gap: 0.5rem;
 }
 
+@media (max-width: 400px) {
+  .header nav ul {
+    padding-left: 16px;
+  }
+}
+
 .header nav ul a {
   text-decoration: none;
   color: var(--purple);
